--- a/src/app/chat/main-chat/main-chat.component.css
+++ b/src/app/chat/main-chat/main-chat.component.css
@@ -1,3 +1,8 @@
+.mat-card {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
 .chat-container {
   height: 100%;
 }
@@ -5,6 +10,14 @@
   width: 100%;
   max-width: 800px;
 }
-mat-card-footer {
-  margin: 20px;
+.mat-card-footer {
+  position: fixed;
+  width: 100%;
+  bottom: 60px;
+  left: 60px;
+  right: 60px;
+}
+.mat-icon {
+  vertical-align: middle;
+  margin-right: 10px;
 }
