--- a/src/app/user-param/user-param.component.html
+++ b/src/app/user-param/user-param.component.html
@@ -2,7 +2,7 @@
   <mat-card-header>
     <mat-card-title>Sign up</mat-card-title>
   </mat-card-header>
-  <form [formGroup]="userParameters" (ngSubmit)="onSubmit()">
+  <form [formGroup]="userParameters">
     <mat-form-field appearance="legacy">
       <mat-label>First name</mat-label>
       <input matInput formControlName="firstName">
@@ -14,6 +14,6 @@
     <mat-radio-group formControlName="gender">
       <mat-radio-button *ngFor="let gender of genders" [value]="gender">{{gender}}</mat-radio-button>
     </mat-radio-group>
-    <button mat-raised-button color="primary" type="submit" class="submit-button" routerLink="/chat">Sign up</button>
+    <button mat-raised-button color="primary" class="submit-button" routerLink="/chat" (click)="onSubmit()">Sign up</button>
   </form>
 </mat-card>
