--- a/src/app/chat/main-chat/main-chat.component.html
+++ b/src/app/chat/main-chat/main-chat.component.html
@@ -2,9 +2,16 @@
   <mat-card-content>
     <mat-list>
       <mat-list-item *ngFor="let message of messages">
-        <img mat-list-avatar [src]="user.avatar">
-        <p mat-line>{{user.firstName}} {{user.lastName}}</p>
-        <p mat-line>{{message}}</p>
+        <p mat-line *ngIf="message.action === action.joined" class="action-line">
+          {{message.user.firstName}} {{message.user.lastName}} joined to conversation
+        </p>
+        <img mat-list-avatar *ngIf="message.action === action.sentMessage" [src]="user.avatar">
+        <p mat-line *ngIf="message.action === action.sentMessage">
+          {{message.user.firstName}} {{message.user.lastName}}
+        </p>
+        <p mat-line *ngIf="message.action === action.sentMessage">
+          {{message.messageContent}}
+        </p>
       </mat-list-item>
     </mat-list>
   </mat-card-content>
