added a validation of sign up form

--- a/src/app/user-param/user-param.component.html
+++ b/src/app/user-param/user-param.component.html
@@ -5,15 +5,15 @@
   <form [formGroup]="userParameters">
     <mat-form-field appearance="legacy">
       <mat-label>First name</mat-label>
-      <input matInput formControlName="firstName">
+      <input matInput formControlName="firstName" required>
     </mat-form-field>
     <mat-form-field appearance="legacy">
       <mat-label>Last name</mat-label>
       <input matInput formControlName="lastName">
     </mat-form-field>
     <mat-radio-group formControlName="gender">
-      <mat-radio-button *ngFor="let gender of genders" [value]="gender">{{gender}}</mat-radio-button>
+      <mat-radio-button *ngFor="let gender of genders; let i = index" [value]="gender" [checked]="i === 0">{{gender}}</mat-radio-button>
     </mat-radio-group>
-    <button mat-raised-button color="primary" class="submit-button" routerLink="/chat" (click)="onSubmit()">Sign up</button>
+    <button mat-raised-button color="primary" [disabled]="!isEnabledSubmit()" class="submit-button" routerLink="/chat" (click)="onSubmit()">Sign up</button>
   </form>
 </mat-card>
