--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -2,7 +2,7 @@ mat-sidenav-container {
   background-color: blueviolet;
   padding: 20px;
 }
-.mat-sidenav-tittle {
+.mat-sidenav-title {
   font-size: 23px;
   color: white;
   vertical-align: middle;
@@ -14,3 +14,60 @@ mat-sidenav-container {
   font-size: 36px;
   color: white;
 }
+.side-bar {
+  width: 350px;
+  position: fixed;
+  height: 100%;
+  padding: 0;
+}
+
+.chat-container {
+  width: calc(100% - 350px);
+  position: fixed;
+  left: 350px;
+  height: 100%;
+}
+
+.chat-container-no-chosen {
+  display: grid;
+  align-content: center;
+  text-align: center;
+}
+
+.side-bar-header {
+  padding: 30px 20px 40px 20px;
+}
+.user-avatar {
+  height: 60px;
+  width: 60px;
+  border: 2px solid blueviolet;
+  padding: 10px;
+}
+.mat-card-subtitle {
+  outline: none;
+  cursor: pointer;
+}
+.chat-item {
+  width: 350px;
+  padding: 20px 15px;
+  cursor: pointer;
+}
+
+.chat-item-avatar {
+  width: 50px;
+  height: 50px;
+}
+
+.mat-list-item-content {
+  padding: 0;
+}
+
+.chat-item-title {
+  font-size: 20px;
+  color: blueviolet;
+}
+
+.mat-card-avatar {
+  margin-right: 20px;
+}
+
