--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+}
 body {
     margin: 0;
     padding: 0;
