--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -4,7 +4,7 @@
       <mat-icon class="menu-button-icon">menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item disabled>
+      <button mat-menu-item disabled (click)="onEditProfile()">
         Edit user
       </button>
       <button mat-menu-item routerLink="/">
@@ -17,9 +17,9 @@
 <mat-card class="side-bar">
   <mat-card-header class="side-bar-header">
     <img mat-card-avatar class="user-avatar" [src]="user.avatar">
-    <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
-    <mat-card-subtitle>Edit Profile</mat-card-subtitle>
-    <mat-card-subtitle routerLink="/">Exit</mat-card-subtitle>
+    <mat-card-title class="side-bar-title">{{user.firstName}} {{user.lastName}}</mat-card-title>
+    <mat-card-subtitle class="side-bar-item" (click)="onEditProfile()">Edit Profile</mat-card-subtitle>
+    <mat-card-subtitle class="side-bar-item" routerLink="/">Exit</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <mat-card class="chat-item" (click)="onOpenChat()">
@@ -32,8 +32,10 @@
   </mat-card-content>
 </mat-card>
 
-<app-main-chat *ngIf="wasChosen" class="chat-container"></app-main-chat>
-
-<div *ngIf="!wasChosen" class="chat-container chat-container-no-chosen">
+<div *ngIf="!wasChosenChat && !wasChosenEdit" class="chat-container chat-container-no-chosen">
   <p>Choose a chat</p>
 </div>
+
+<app-main-chat *ngIf="wasChosenChat" class="chat-container"></app-main-chat>
+
+<app-edit-user-param *ngIf="wasChosenEdit" class="chat-container"></app-edit-user-param>
