--- a/src/app/user-param/user-param.component.css
+++ b/src/app/user-param/user-param.component.css
@@ -1,7 +1,7 @@
 mat-card {
   max-width: 400px;
   width: 100%;
-  margin: 0 auto;
+  margin: 50px auto 0 auto;
   display: grid;
   align-content: center;
 }
