added edit profile form

--- a/src/app/chat/edit-user-param/edit-user-param.component.html
+++ b/src/app/chat/edit-user-param/edit-user-param.component.html
@@ -1,3 +1,2 @@
-<p>
-  edit-user-param works!
-</p>
+<app-user-param [title]="'Edit Profile'" [submitTitle]="'Save changes'" [isEdit]="true" [userParam]="user"></app-user-param>
+
