--- a/src/app/chat/main-chat/main-chat.component.css
+++ b/src/app/chat/main-chat/main-chat.component.css
@@ -1,4 +1,5 @@
 .mat-card {
+  position: relative;
   width: 100%;
 }
 .chat-container {
@@ -38,4 +39,20 @@
   position: relative;
   right: 0;
   top: 0;
+}
+
+.chat-container-join {
+  position: relative;
+  padding: 0!important;
+}
+
+.join-button {
+  position: absolute;
+  bottom: 80px;
+  left: 0;
+  width: 100%;
+  padding: 30px;
+  font-size: 30px;
+  color: white;
+  background-color: blueviolet;
 }
