--- a/src/app/chat/main-chat/main-chat.component.html
+++ b/src/app/chat/main-chat/main-chat.component.html
@@ -1,21 +1,21 @@
 <mat-card class="chat-container" layot="column" *ngIf="user.action.joined">
   <mat-card-content>
-    <p mat-line class="action-line" *ngIf="user.action.joined">
-      {{user.firstName}} {{user.lastName}} joined to conversation
-    </p>
-    <p mat-line class="action-line" *ngIf="user.action.edit">
-      User already is {{user.firstName}} {{user.lastName}}
-    </p>
     <mat-list>
-      <mat-list-item *ngFor="let message of messages" [ngClass]="[(message.user.action.sentMessage) ? 'message-item' : '']">
-        <img mat-list-avatar [src]="user.avatar">
-        <p mat-line class="message-item-user-name">
-          {{message.user.firstName}} {{message.user.lastName}}
-        </p>
-        <p mat-line>
+      <mat-list-item *ngFor="let message of messages" [ngClass]="[(message.action === 'sentMessage') ? 'message-item' : '']">
+        <p mat-line class="action-line" *ngIf="message.action === 'joined'">
           {{message.messageContent}}
         </p>
-        <div class="message-item-time">{{message.sendingTime | date: 'h:mma'}}</div>
+        <p mat-line class="action-line" *ngIf="message.action === 'edit'">
+          User already is {{user.firstName}} {{user.lastName}}
+        </p>
+        <img mat-list-avatar [src]="user.avatar" *ngIf="message.action === 'sentMessage'">
+        <p mat-line class="message-item-user-name" *ngIf="message.action === 'sentMessage'">
+          {{message.user.firstName}} {{message.user.lastName}}
+        </p>
+        <p mat-line *ngIf="message.action === 'sentMessage'">
+          {{message.messageContent}}
+        </p>
+        <div class="message-item-time" *ngIf="message.action === 'sentMessage'">{{message.sendingTime | date: 'h:mma'}}</div>
       </mat-list-item>
     </mat-list>
   </mat-card-content>
