was fixed init messages array and added scroll bar

--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -24,6 +24,15 @@
   text-align: center;
 }
 
+.message-list {
+  overflow: auto;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  bottom: 240px;
+  right: 40px;
+}
+
 .message-item {
   background-color: #4c62691a;
   border-radius: 10px;
