--- a/client/src/app/user-param/user-param.component.html
+++ b/client/src/app/user-param/user-param.component.html
@@ -1,19 +1,33 @@
-<mat-card>
+<mat-card [class]="(isEdit) ? 'mat-card edit-user-component' : 'mat-card welcome-component'">
   <mat-card-header>
     <mat-card-title>{{title}}</mat-card-title>
   </mat-card-header>
   <form [formGroup]="userParameters">
+
     <mat-form-field appearance="legacy">
       <mat-label>First name</mat-label>
       <input matInput formControlName="firstName" required [value]="(isEdit) ? userParam.firstName : ''">
     </mat-form-field>
+
     <mat-form-field appearance="legacy">
       <mat-label>Last name</mat-label>
       <input matInput formControlName="lastName" [value]="(isEdit) ? userParam.lastName : ''">
     </mat-form-field>
+
     <mat-radio-group formControlName="gender" required>
       <mat-radio-button *ngFor="let gender of genders" [value]="gender" [checked]="isChecked(gender)">{{gender}}</mat-radio-button>
     </mat-radio-group>
+
+    <mat-form-field appearance="legacy">
+      <mat-label>Login</mat-label>
+      <input matInput formControlName="login" required [value]="(isEdit) ? userParam.login : ''">
+    </mat-form-field>
+
+    <mat-form-field appearance="legacy">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" required [value]="(isEdit) ? userParam.password : ''">
+    </mat-form-field>
+
      <button mat-raised-button *ngIf="!isEdit" color="primary" [disabled]="!isEnabledSubmit()" class="submit-button" routerLink="/chat" (click)="onSubmit()">
       {{submitTitle}}
     </button>
