--- a/client/src/app/user-param/user-param.component.html
+++ b/client/src/app/user-param/user-param.component.html
@@ -6,7 +6,7 @@
 
     <mat-form-field appearance="legacy">
       <mat-label>First name</mat-label>
-      <input matInput formControlName="firstName" required [value]="(isEdit) ? userParam.firstName : ''">
+      <input matInput formControlName="firstName" required autofocus [value]="(isEdit) ? userParam.firstName : ''">
     </mat-form-field>
 
     <mat-form-field appearance="legacy">
