--- a/client/src/app/user-param/user-param.component.html
+++ b/client/src/app/user-param/user-param.component.html
@@ -6,12 +6,12 @@
 
     <mat-form-field appearance="legacy">
       <mat-label>First name</mat-label>
-      <input matInput formControlName="firstName" required autofocus [value]="(isEdit) ? userParam.firstName : ''">
+      <input matInput formControlName="firstName" required autofocus [value]="(isEdit) ? userBeforeEdit.firstName : ''">
     </mat-form-field>
 
     <mat-form-field appearance="legacy">
       <mat-label>Last name</mat-label>
-      <input matInput formControlName="lastName" [value]="(isEdit) ? userParam.lastName : ''">
+      <input matInput formControlName="lastName" [value]="(isEdit) ? userBeforeEdit.lastName : ''">
     </mat-form-field>
 
     <mat-radio-group formControlName="gender" required>
@@ -20,12 +20,12 @@
 
     <mat-form-field appearance="legacy">
       <mat-label>Login</mat-label>
-      <input matInput formControlName="login" required [value]="(isEdit) ? userParam.login : ''">
+      <input matInput formControlName="login" required [value]="(isEdit) ? userBeforeEdit.login : ''">
     </mat-form-field>
 
     <mat-form-field appearance="legacy">
       <mat-label>Password</mat-label>
-      <input matInput type="password" formControlName="password" required [value]="(isEdit) ? userParam.password : ''">
+      <input matInput type="password" formControlName="password" required [value]="(isEdit) ? userBeforeEdit.password : ''">
     </mat-form-field>
 
      <button mat-raised-button *ngIf="!isEdit" color="primary" [disabled]="!isEnabledSubmit()" class="submit-button" routerLink="/chat" (click)="onSubmit()">
