--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -6,17 +6,17 @@
 
 <mat-card class="side-bar">
   <mat-card-header class="side-bar-header">
-    <img mat-card-avatar class="user-avatar" [src]="user.avatar">
-    <mat-card-title class="side-bar-title">{{user.firstName}} {{user.lastName}} {{user.id}}</mat-card-title>
+    <img mat-card-avatar class="user-avatar" [src]="user?.avatar || ''">
+    <mat-card-title class="side-bar-title">{{user?.firstName}} {{user?.lastName}} {{user?.id}}</mat-card-title>
     <mat-card-subtitle class="side-bar-item" routerLink="edit-profile">Edit Profile</mat-card-subtitle>
     <mat-card-subtitle class="side-bar-item" routerLink="/">Exit</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <mat-card class="chat-item" routerLink="main-chat">
       <mat-card-header>
-        <img mat-card-avatar class="chat-item-avatar" [src]="mainChatInfo.avatar">
-        <mat-card-title class="chat-item-title">{{mainChatInfo.name}}t</mat-card-title>
-        <mat-card-subtitle>{{mainChatInfo.message}}</mat-card-subtitle>
+        <img mat-card-avatar class="chat-item-avatar" [src]="mainChatInfo?.avatar || ''">
+        <mat-card-title class="chat-item-title">{{mainChatInfo?.name}}t</mat-card-title>
+        <mat-card-subtitle>{{mainChatInfo?.message}}</mat-card-subtitle>
       </mat-card-header>
     </mat-card>
   </mat-card-content>
