added LogInComponent and logic user log in with server without client reaction yet

--- a/client/src/app/user-param/user-param.component.css
+++ b/client/src/app/user-param/user-param.component.css
@@ -1,7 +1,8 @@
 .welcome-component {
   max-width: 400px;
-  width: 100%;
-  margin: 50px auto;
+  /*width: 100%;*/
+  float: left;
+  /*margin: 50px auto;*/
   display: grid;
   align-content: center;
 }
