--- a/client/src/app/welcome-page/welcome-page.component.html
+++ b/client/src/app/welcome-page/welcome-page.component.html
@@ -1,1 +1,4 @@
-<app-user-param [title]="'Sign up'" [submitTitle]="'Sign up'" [isEdit]="false"></app-user-param>
+<div class="welcome-component-container">
+  <app-user-param [title]="'Sign up'" [submitTitle]="'Sign up'" [isEdit]="false"></app-user-param>
+  <app-user-log-in></app-user-log-in>
+</div>
