--- a/client/src/app/user-log-in/user-log-in.component.html
+++ b/client/src/app/user-log-in/user-log-in.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-card welcome-log-in">
   <mat-card-header>
-    <mat-card-title>Do you already have you own account? Log in</mat-card-title>
+    <mat-card-title>Did you already have you own account? <span class="mat-card-title-span">Log in</span></mat-card-title>
   </mat-card-header>
 
   <mat-card-content>
