--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -1,29 +1,38 @@
 <mat-card class="chat-container" layot="column" *ngIf="user.action.joined">
   <mat-card-content>
-    <mat-list class="message-list">
-      <mat-list-item *ngFor="let message of messages" [ngClass]="[(message.action === 'sentMessage') ? 'message-item' : '']">
+    <div #messageList class="message-list">
+
+      <div #messageListItem class="message-list-item" *ngFor="let message of messages" [ngClass]="[(message.action === 'sentMessage') ? 'message-item' : '']">
+
         <p mat-line class="action-line" *ngIf="message.action === 'joined'">
           {{message.messageContent}}
         </p>
+
         <p mat-line class="action-line" *ngIf="message.action === 'edit'">
           {{message.messageContent}}
         </p>
-        <img mat-list-avatar [src]="message.user.avatar" *ngIf="message.action === 'sentMessage'">
-        <p mat-line class="message-item-user-name" *ngIf="message.action === 'sentMessage'">
+
+        <img mat-card-avatar [src]="message.user.avatar" *ngIf="message.action === 'sentMessage'" class="message-list-item-avatar">
+
+        <h3 mat-line class="message-item-user-name" *ngIf="message.action === 'sentMessage'" class="message-list-item-title">
           {{message.user.firstName}} {{message.user.lastName}}
-        </p>
-        <p mat-line *ngIf="message.action === 'sentMessage'">
+        </h3>
+
+        <p class="mat-list-item-message" *ngIf="message.action === 'sentMessage'">
           {{message.messageContent}}
         </p>
-        <div class="message-item-time" *ngIf="message.action === 'sentMessage'">{{message.sendingTime | date: 'h:mma'}}</div>
-      </mat-list-item>
-    </mat-list>
+
+        <span class="message-item-time" *ngIf="message.action === 'sentMessage'">{{message.sendingTime | date: 'h:mma'}}</span>
+
+      </div>
+
+    </div>
   </mat-card-content>
-  <mat-card-footer>
+  <mat-card-footer class="chat-container-footer">
     <mat-icon>create</mat-icon>
     <mat-form-field class="message-input">
       <mat-label>Type a message</mat-label>
-      <input matInput (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent" autofocus>
+      <input matInput (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent" autofocus autocomplete="off">
     </mat-form-field>
   </mat-card-footer>
 </mat-card>
