--- a/client/src/app/user-log-in/user-log-in.component.css
+++ b/client/src/app/user-log-in/user-log-in.component.css
@@ -13,3 +13,13 @@
   display: block;
   margin: 10px auto 0 auto;
 }
+
+.mat-card-title {
+  color: dimgrey;
+  font-size: 16px;
+}
+
+.mat-card-title-span {
+  color: blueviolet;
+  font-size: 17px;
+}
