changed message field in MainChatComponent from input to textarea and added main server's file changes

--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -40,6 +40,7 @@
   margin-bottom: 15px;
   margin-right: 15px;
   margin-left: 60px;
+  word-break: break-word;
 }
 
 .message-item-user-name {
@@ -50,7 +51,7 @@
 .message-item-time {
   position: absolute;
   right: 25px;
-  bottom: 20px;
+  top: 20px;
   color: gray;
 }
 
