--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -32,7 +32,7 @@
     <mat-icon>create</mat-icon>
     <mat-form-field class="message-input">
       <mat-label>Type a message</mat-label>
-      <input matInput (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent" autofocus autocomplete="off">
+      <textarea matInput (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent" autofocus autocomplete="off"></textarea>
     </mat-form-field>
   </mat-card-footer>
 </mat-card>
