fixed correctly textarea's auto height and it max-height before appear a scroll

--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -32,7 +32,8 @@
     <mat-icon>create</mat-icon>
     <mat-form-field class="message-input">
       <mat-label>Type a message</mat-label>
-      <textarea matInput (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent" autofocus autocomplete="off"></textarea>
+      <textarea matInput mat-autosize (keyup.enter)="sendMessage(messageContent)" [(ngModel)]="messageContent"
+                autofocus autocomplete="off"></textarea>
     </mat-form-field>
   </mat-card-footer>
 </mat-card>
