--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -7,10 +7,20 @@
   width: 100%;
   max-width: 800px;
 }
+
+.message-input textarea {
+  max-height: 90px;
+  overflow-y: auto;
+}
+
+.message-input textarea.cdk-textarea-autosize-measuring {
+  padding: 4px 0 !important;
+}
+
 .chat-container-footer {
   position: fixed;
   width: 100%;
-  bottom: 60px;
+  bottom: 50px;
   left: 410px;
   right: 60px;
 }
