styled scroll bar

--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -1,6 +1,6 @@
 mat-sidenav-container {
-  background-color: blueviolet;
-  padding: 20px;
+  background-color: #8d63ad;
+  padding: 32px 30px;
 }
 .mat-sidenav-title {
   font-size: 23px;
