--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -35,12 +35,20 @@
 }
 
 .message-list {
-  overflow: auto;
+  overflow-y: hidden;
   position: absolute;
   top: 40px;
   left: 40px;
-  bottom: 240px;
+  bottom: 260px;
   right: 40px;
+}
+
+.message-list:hover {
+  overflow-y: auto;
+}
+
+.message-list:hover .message-item {
+  margin-right: 15px;
 }
 
 .message-item {
@@ -48,7 +56,7 @@
   background-color: #4c62691a;
   border-radius: 10px;
   margin-bottom: 15px;
-  margin-right: 15px;
+  margin-right: 25px;
   margin-left: 60px;
   word-break: break-word;
 }
@@ -96,4 +104,24 @@
 .message-list-item-title {
   margin: 0;
   color: #905151;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  background: #c1a9d64f;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #705e7d9c;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a391b0;
 }
