added icon to anika angular chat header

--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container>
   <mat-sidenav-content>
+    <mat-icon>forum</mat-icon>
     <span class="mat-sidenav-title">Anika Angular chat</span>
   </mat-sidenav-content>
 </mat-sidenav-container>
