--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -7,6 +7,12 @@ mat-sidenav-container {
   color: white;
   vertical-align: middle;
 }
+
+.mat-icon {
+  font-size: 30px;
+  margin-right: 15px;
+}
+
 .menu-button {
   margin-right: 35px;
 }
