--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,8 @@
+<mat-sidenav-container>
+  <mat-sidenav-content>
+    <mat-icon>forum</mat-icon>
+    <span class="mat-sidenav-title">Anika Angular chat</span>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
 <router-outlet></router-outlet>
