--- a/client/src/app/welcome-page/welcome-page.component.css
+++ b/client/src/app/welcome-page/welcome-page.component.css
@@ -3,7 +3,7 @@
   max-width: 900px;
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 200px);
+  min-height: calc(100vh - 103px - 200px);
   margin: 50px auto 150px auto;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
