added switch between sign up and in forms, still need fixing box-shadow

--- a/client/src/app/user-log-in/user-log-in.component.css
+++ b/client/src/app/user-log-in/user-log-in.component.css
@@ -1,8 +1,9 @@
 .welcome-log-in {
   max-width: 400px;
-  float: right;
+  /*float: right;*/
   display: grid;
   align-content: center;
+  background-color: #9300ff05;
 }
 
 .mat-form-field {
