--- a/client/src/app/welcome-page/welcome-page.component.css
+++ b/client/src/app/welcome-page/welcome-page.component.css
@@ -1,16 +1,49 @@
 .welcome-component-container {
   display: grid;
-  max-width: 900px;
+  max-width: 1000px;
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 103px - 200px);
-  margin: 50px auto 150px auto;
-  grid-template-columns: 1fr 1fr;
+  min-height: calc(100vh - 103px - 250px);
+  margin: 100px auto 150px auto;
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  align-items: center;
+  /*align-items: center;*/
+}
+
+.welcome-component__sign-container {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .welcome-component-container::after {
   content: '';
   clear: both;
+}
+
+.sign-container__switch-block {
+  max-width: 400px;
+  width: 100%;
+}
+
+.switch-block__button {
+  display: block;
+  float: left;
+  width: 50%;
+  text-align: center;
+  border: 1px solid #e8e8e8;
+  padding: 10px;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-size: 18px;
+  border-bottom: 0;
+}
+
+.switch-block__button:first-child {
+  border-top-left-radius: 5px;
+  border-right: 0;
+}
+
+.switch-block__button:last-child {
+  border-top-right-radius: 5px;
 }
