--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -4,7 +4,7 @@
   height: 100%;
 }
 .message-input {
-  width: 100%;
+  width: calc(100% - 34px);
   max-width: 800px;
 }
 
@@ -19,7 +19,6 @@
 
 .chat-container-footer {
   position: fixed;
-  width: 100%;
   bottom: 50px;
   left: 410px;
   right: 60px;
@@ -62,7 +61,7 @@
 }
 
 .message-item-user-name {
-  font-size: 16px!important;
+  font-size: 15px!important;
   font-weight: bold!important;
   margin-bottom: 10px!important;
 }
@@ -90,7 +89,7 @@
 }
 
 .message-list-item {
-  padding: 20px;
+  padding: 17px;
 }
 
 .message-list-item-avatar {
@@ -103,6 +102,7 @@
 
 .message-list-item-title {
   margin: 0;
+  font-size: 15px;
   color: #905151;
 }
 
