--- a/client/src/app/welcome-page/welcome-page.component.css
+++ b/client/src/app/welcome-page/welcome-page.component.css
@@ -1,24 +1,15 @@
 .welcome-component-container {
-  display: grid;
+  min-width: 400px;
   max-width: 1000px;
+  position: fixed;
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 103px - 250px);
-  margin: 100px auto 150px auto;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  /*align-items: center;*/
 }
 
 .welcome-component__sign-container {
   max-width: 400px;
   width: 100%;
-  margin: 0 auto;
-}
-
-.welcome-component-container::after {
-  content: '';
-  clear: both;
+  margin: 50px auto;
 }
 
 .sign-container__switch-block {
