--- a/client/src/app/user-param/user-param.component.html
+++ b/client/src/app/user-param/user-param.component.html
@@ -1,6 +1,6 @@
 <mat-card [class]="(isEdit) ? 'mat-card edit-user-component' : 'mat-card welcome-component'">
   <mat-card-header>
-    <mat-card-title [class]="(isEdit) ? 'mat-card-title edit-user-component__title' : 'mat-card-title welcome-component_title'">{{title}}</mat-card-title>
+    <mat-card-title [class]="(isEdit) ? 'mat-card-title edit-user-component__title' : 'mat-card-title welcome-component__title'">{{title}}</mat-card-title>
   </mat-card-header>
   <form [formGroup]="userParameters">
 
