--- a/client/src/app/welcome-page/welcome-page.component.css
+++ b/client/src/app/welcome-page/welcome-page.component.css
@@ -14,6 +14,7 @@
 .sign-container__switch-block {
   max-width: 400px;
   width: 100%;
+  box-shadow: inset 1px 1px 5px rgba(0,0,0,.09)!important;
 }
 
 .switch-block__button {
@@ -37,3 +38,5 @@
 .switch-block__button:last-child {
   border-top-right-radius: 5px;
 }
+
+
