--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -1,11 +1,13 @@
-.chat-container {
+.main-chat-container {
   position: relative;
   width: 100%;
   height: 100%;
+  background: url("../../images/backgrounds/img65.jpeg") no-repeat;
+  background-size: cover;
 }
+
 .message-input {
   width: calc(100% - 34px);
-  max-width: 800px;
 }
 
 .message-input textarea {
@@ -17,7 +19,7 @@
   padding: 4px 0 !important;
 }
 
-.chat-container-footer {
+.main-chat-container-footer {
   position: fixed;
   bottom: 50px;
   left: 410px;
@@ -50,6 +52,10 @@
   margin-right: 15px;
 }
 
+.message-list:hover .action-line {
+  padding-left: 10px;
+}
+
 .message-item {
   position: relative;
   background-color: #4c62691a;
@@ -72,7 +78,7 @@
   color: gray;
 }
 
-.chat-container-join {
+.main-chat-container-join {
   position: relative;
   padding: 0!important;
 }
@@ -101,7 +107,7 @@
 }
 
 .message-list-item-title {
-  margin: 0;
+  margin: 0 0 10px;
   font-size: 15px;
   color: #905151;
 }
@@ -124,4 +130,8 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #a391b0;
+}
+
+.action-item {
+  padding-top: 0;
 }
