--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -1,8 +1,8 @@
-<mat-card class="chat-container" layot="column" *ngIf="user.action.joined">
+<mat-card class="main-chat-container" layot="column" *ngIf="user.action.joined">
   <mat-card-content>
     <div #messageList class="message-list">
 
-      <div #messageListItem class="message-list-item" *ngFor="let message of messages" [ngClass]="[(message.action === 'sentMessage') ? 'message-item' : '']">
+      <div #messageListItem class="message-list-item" *ngFor="let message of messages" [ngClass]="[(message.action === 'sentMessage') ? 'message-item' : 'action-item']">
 
         <p mat-line class="action-line" *ngIf="message.action === 'joined'">
           {{message.messageContent}}
@@ -28,7 +28,7 @@
 
     </div>
   </mat-card-content>
-  <mat-card-footer class="chat-container-footer">
+  <mat-card-footer class="main-chat-container-footer">
     <mat-icon>create</mat-icon>
     <mat-form-field class="message-input">
       <mat-label>Type a message</mat-label>
@@ -37,6 +37,6 @@
     </mat-form-field>
   </mat-card-footer>
 </mat-card>
-<mat-card class="chat-container" layot="column" *ngIf="!user.action.joined">
+<mat-card class="main-chat-container" layot="column" *ngIf="!user.action.joined">
   <button mat-button class="join-button" (click)="onJoin()">Join</button>
 </mat-card>
