--- a/client/src/app/welcome-page/welcome-page.component.css
+++ b/client/src/app/welcome-page/welcome-page.component.css
@@ -1,8 +1,26 @@
 .welcome-component-container {
+  position: relative;
+}
+
+.welcome-component-container:before {
+  content: '';
   min-width: 400px;
   position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100%;
+  background: url("../images/backgrounds/img8.jpg") no-repeat;
+  background-size: cover;
+  z-index: 1;
+  opacity: 0.5;
+}
+
+.welcome-component-container-block {
+  position: relative;
+  z-index: 2;
 }
 
 .welcome-component__sign-container {
@@ -37,6 +55,10 @@
 
 .switch-block__button:last-child {
   border-top-right-radius: 5px;
+}
+
+::ng-deep .mat-button-toggle-checked {
+  background-color: white;
 }
 
 
