--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -12,7 +12,13 @@
           {{message.messageContent}}
         </p>
 
-        <img mat-card-avatar [src]="message.user.avatar" *ngIf="message.action === 'sentMessage'" class="message-list-item-avatar">
+        <!--<div *ngIf="message.action === 'sentMessage'" class="avatar-block">-->
+          <!--<img mat-card-avatar [src]="message.user.avatar" class="avatar-block__avatar">-->
+          <!--<span *ngIf="user.online" class="avatar-block__online">online</span>-->
+        <!--</div>-->
+
+        <img mat-card-avatar [src]="message.user.avatar" *ngIf="message.action === 'sentMessage'" class="message-list-item__avatar">
+
 
         <h3 mat-line class="message-item-user-name" *ngIf="message.action === 'sentMessage'" class="message-list-item-title">
           {{message.user.firstName}} {{message.user.lastName}}
