--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -8,9 +8,9 @@
   <mat-card-content>
     <mat-card class="chat-item" routerLink="main-chat">
       <mat-card-header>
-        <img mat-card-avatar class="chat-item-avatar" [src]="mainChatInfo?.avatar || ''">
-        <mat-card-title class="chat-item-title">{{mainChatInfo?.name}}t</mat-card-title>
-        <mat-card-subtitle>{{mainChatInfo?.message}}</mat-card-subtitle>
+        <img mat-card-avatar class="chat-item-avatar" [src]="mainChatRoom?.avatar || ''">
+        <mat-card-title class="chat-item-title">{{mainChatRoom?.name}}t</mat-card-title>
+        <mat-card-subtitle>{{mainChatRoom?.lastMessage}} 2</mat-card-subtitle>
       </mat-card-header>
     </mat-card>
   </mat-card-content>
