--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -6,6 +6,21 @@
   background-size: cover;
 }
 
+.main-chat__header {
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 24px;
+  background-color: #0d06138a;
+  color: #fbf8f8;
+}
+
+.main-chat__header-text {
+  padding-top: 10px;
+}
+
 .message-input {
   width: calc(100% - 34px);
 }
@@ -154,4 +169,8 @@
 
 .action-item {
   padding-top: 0;
+}
+
+.mat-card-content {
+  height: 100%;
 }
