--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -1,6 +1,6 @@
 <mat-card class="main-chat-container" layot="column" *ngIf="user.action.joined">
   <mat-card-header class="main-chat__header">
-    <span class="main-chat__header-text">Chat has {{mainChatRoom.users.length}} users, online {{mainChatRoom.activeUsers.length}}</span>
+    <span class="main-chat__header-text">Chat has {{mainChatRoom?.users.length}} users, online {{mainChatRoom?.activeUsers.length}}</span>
   </mat-card-header>
   <mat-card-content>
     <div #messageList class="message-list">
