--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -51,24 +51,17 @@
 }
 
 .message-list {
-  overflow-y: hidden;
+  overflow-y: auto;
   position: absolute;
   top: 40px;
   left: 40px;
   bottom: 260px;
   right: 40px;
+  visibility: hidden;
 }
 
-.message-list:hover {
-  overflow-y: auto;
-}
-
-.message-list:hover .message-item {
-  margin-right: 15px;
-}
-
-.message-list:hover .action-line {
-  padding-left: 10px;
+.message-list-content, .message-list:hover {
+  visibility: visible;
 }
 
 .message-item {
