--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -5,33 +5,37 @@
   <mat-card-content>
     <div #messageList class="message-list">
 
-      <div #messageListItem class="message-list-item" *ngFor="let message of messages" [ngClass]="[(message.action === 'sentMessage') ? 'message-item' : 'action-item']">
+      <div class="message-list-content">
 
-        <p mat-line class="action-line" *ngIf="message.action === 'joined'">
-          {{message.messageContent}}
-        </p>
+        <div #messageListItem class="message-list-item" *ngFor="let message of messages" [ngClass]="[(message.action === 'sentMessage') ? 'message-item' : 'action-item']">
 
-        <p mat-line class="action-line" *ngIf="message.action === 'edit'">
-          {{message.messageContent}}
-        </p>
+          <p mat-line class="action-line" *ngIf="message.action === 'joined'">
+            {{message.messageContent}}
+          </p>
 
-        <!--<div *ngIf="message.action === 'sentMessage'" class="avatar-block">-->
-          <!--<img mat-card-avatar [src]="message.user.avatar" class="avatar-block__avatar">-->
-          <!--<span *ngIf="user.online" class="avatar-block__online">online</span>-->
-        <!--</div>-->
+          <p mat-line class="action-line" *ngIf="message.action === 'edit'">
+            {{message.messageContent}}
+          </p>
 
-        <img mat-card-avatar [src]="message.user.avatar" *ngIf="message.action === 'sentMessage'" class="message-list-item__avatar">
+          <!--<div *ngIf="message.action === 'sentMessage'" class="avatar-block">-->
+            <!--<img mat-card-avatar [src]="message.user.avatar" class="avatar-block__avatar">-->
+            <!--<span *ngIf="user.online" class="avatar-block__online">online</span>-->
+          <!--</div>-->
+
+          <img mat-card-avatar [src]="message.user.avatar" *ngIf="message.action === 'sentMessage'" class="message-list-item__avatar">
 
 
-        <h3 mat-line class="message-item-user-name" *ngIf="message.action === 'sentMessage'" class="message-list-item-title">
-          {{message.user.firstName}} {{message.user.lastName}}
-        </h3>
+          <h3 mat-line class="message-item-user-name" *ngIf="message.action === 'sentMessage'" class="message-list-item-title">
+            {{message.user.firstName}} {{message.user.lastName}}
+          </h3>
 
-        <p class="mat-list-item-message" *ngIf="message.action === 'sentMessage'">
-          {{message.messageContent}}
-        </p>
+          <p class="mat-list-item-message" *ngIf="message.action === 'sentMessage'">
+            {{message.messageContent}}
+          </p>
 
-        <span class="message-item-time" *ngIf="message.action === 'sentMessage'">{{message.sendingTime | date: 'h:mma'}}</span>
+          <span class="message-item-time" *ngIf="message.action === 'sentMessage'">{{message.sendingTime | date: 'h:mma'}}</span>
+
+        </div>
 
       </div>
 
