fixed mongoose data updating after log in and async code in common

--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -10,7 +10,7 @@
       <mat-card-header>
         <img mat-card-avatar class="chat-item-avatar" [src]="mainChatRoom?.avatar || ''">
         <mat-card-title class="chat-item-title">{{mainChatRoom?.name}}t</mat-card-title>
-        <mat-card-subtitle>{{mainChatRoom?.lastMessage}} 2</mat-card-subtitle>
+        <mat-card-subtitle>{{mainChatRoom?.lastMessage}}</mat-card-subtitle>
       </mat-card-header>
     </mat-card>
   </mat-card-content>
