--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -24,7 +24,8 @@
           <!--</div>-->
 
           <img mat-card-avatar [src]="message.user.avatar"
-               *ngIf="message.action === 'sentMessage' && message.user.id !== user.id" class="message-list-item__avatar">
+               *ngIf="message.action === 'sentMessage' && message.user.id !== user.id"
+               class="message-list-item__avatar" routerLink="../user-profile">
 
 
           <h3 mat-line class="message-item-user-name"
