--- a/client/src/app/chat/user-profile/user-profile.component.html
+++ b/client/src/app/chat/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
 <h4>user-profile</h4>
 
 <p>name: {{user.firstName}} {{user.lastName}}</p>
-<a>sent a message</a>
+<a routerLink="../direct-messages-room" [queryParams]="currentUserOfProfile(user)">sent a message</a>
