--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -21,7 +21,7 @@
           <img mat-card-avatar [src]="message.user.avatar"
                *ngIf="message.action === 'sentMessage' && message.user.id !== user.id"
                class="message-list-item__avatar" routerLink="../user-profile"
-               [queryParams]="currentUserOfAvatar(message.user)" [skipLocationChange]="true">
+               [queryParams]="{id: message.user.id}">
 
 
           <h3 mat-line class="message-item-user-name"
